'add_child' Layout Added

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="ילדים">הילדים שלי</string>
     <string name="התנתקות">התנתקות</string>
     <string name="עדכון">עדכון פרופיל</string>
+    <string name="הוסף_ילד">הוספת ילד</string>
 </resources>
