'add_child' Coded
'add_child' coded but need to be fixed

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="כיתה">כיתה:</string>
     <string name="ילד">ילד</string>
     <string name="ילדה">ילדה</string>
+    <string name="מספר">מספר</string>
+    <string name="בית_ספר">בית ספר:</string>
 </resources>
