'children_update' Added
-Need to change Input Type on 'add_child' & 'children_update'
-All 'children_update' still needs to get coded

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="ילדה">ילדה</string>
     <string name="מספר">מספר</string>
     <string name="בית_ספר">בית ספר:</string>
+    <string name="מחיקה">מחיקה</string>
+    <string name="עדכון_נתונים">עדכון נתונים</string>
     <string name="סניף">סניף הבית</string>
 
 </resources>
