Login & Register Changed
I changed Login & Register activities from separate activities into one activity

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="כניסת_הורים">  כניסת הורים</string>
     <string name="אימייל">אימייל:</string>
     <string name="סיסמא">סיסמא:</string>
-    <string name="הורים_הרשמה">הרשמה להורים</string>
+    <string name="הרשמה">הרשמה</string>
     <string name="שם_פרטי">שם פרטי:</string>
     <string name="שם_משפחה">שם משפחה:</string>
     <string name="תעודת_זהות">תעודת זהות:</string>
