'Coordinator' Class Renamed
I renamed 'Coordinator' class to 'Worker' class

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="ברוך_הבא">ברוך הבא </string>
     <string name="הוסף_ילד">הוסף ילד</string>
     <string name="עובדים">העובדים שלי</string>
+    <string name="הוסף_עובד">הוסף עובד</string>
 
 </resources>
