'add_worker' Activity Coded

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="עובדים">העובדים שלי</string>
     <string name="הוסף_עובד">הוסף עובד</string>
     <string name="אימייל_עובד_הערה">*על האימייל הנ"ל להיות אותו האימייל שאיתו נרשם אותו עובד</string>
+    <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
 </resources>
