'workers_update' Coded

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -40,12 +40,13 @@
     <string name="בחר_תאריך_התחלה">תחילת תקופת העבודה (חובה)</string>
     <string name="בחר_תאריך_סיום">סיום תקופת העבודה (לא חובה)</string>
 
-     //כותרות והערות
+    //כותרות והערות
     <string name="הרשמה">הרשמה</string>
     <string name="ברוך_הבא">ברוך הבא </string>
     <string name="הוסף_ילד">הוסף ילד</string>
     <string name="עובדים">העובדים שלי</string>
     <string name="הוסף_עובד">הוסף עובד</string>
+    <string name="עדכן_עובד">עדכן עובד</string>
     <string name="אימייל_עובד_הערה">*על האימייל הנ"ל להיות אותו האימייל שאיתו נרשם אותו עובד</string>
     <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
 </resources>
