--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="התנתקות">התנתקות</string>
     <string name="עדכון">עדכון פרופיל</string>
     <string name="מחיקה">מחיקה</string>
+    <string name="סיום_עבודה">סיום תקופת העבודה</string>
     <string name="עדכון_נתונים">עדכון נתונים</string>
     <string name="בחר_תאריך_התחלה">תחילת תקופת העבודה (חובה)</string>
     <string name="בחר_תאריך_סיום">סיום תקופת העבודה (לא חובה)</string>
