'coordinators_guides' Coded

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="מדריכים_בהמתנה">מדריכים בהמתנה לאישור</string>
     <string name="אימייל_עובד_הערה">*על האימייל הנ"ל להיות אותו האימייל שאיתו נרשם אותו עובד</string>
     <string name="מדריכים_בהמתנה_הערה">לחץ על מדריך ברשימה על מנת לאשר אותו במערכת</string>
+    <string name="מדריכים_להסרה_הערה">לחץ על מדריך ברשימה על מנת להסיר אותו מהמערכת</string>
     <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
 </resources>
