'guides_hub' Designed

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="פרופיל">הפרופיל שלי</string>
     <string name="ילדים">הילדים שלי</string>
     <string name="מדריכים">המדריכים שלי</string>
+    <string name="פעולות">הפעולות שלי</string>
     <string name="התנתקות">התנתקות</string>
     <string name="עדכון">עדכון פרופיל</string>
     <string name="מחיקה">מחיקה</string>
