--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="אימייל_עובד_הערה">*על האימייל הנ"ל להיות אותו האימייל שאיתו נרשם אותו עובד</string>
     <string name="מדריכים_בהמתנה_הערה">לחץ על מדריך ברשימה על מנת לאשר אותו במערכת</string>
     <string name="מדריכים_להסרה_הערה">לחץ על מדריך ברשימה על מנת להסיר אותו מהמערכת</string>
+    <string name="יצירת_פעולה_הערה">*ליצירת פעולה יש להכין קובץ DOCX ובו מתואר גוף הפעולה בלבד</string>
     <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
 </resources>
