--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="מדריכים_להסרה_הערה">לחץ על מדריך ברשימה על מנת להסיר אותו מהמערכת</string>
     <string name="יצירת_פעולה_הערה">*ליצירת פעולה יש להכין קובץ DOCX ובו מתואר גוף הפעולה בלבד</string>
     <string name="תאריך_סיום_עובד_הערה">*על מנת לאפס את תאריך הסיום יש ללחוץ לחיצה ארוכה על הכפתור לבחירת תאריך הסיום</string>
+    <string name="שם_פעולה">שם פעולה</string>
+    <string name="הוסף_פעולה">הוסף פעולה</string>
 </resources>
