'parents_menu' Added

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="תאריך_פעולה">בחר תאריך לפעולה</string>
     <string name="לא_נבחרה_פעולה">לא נבחרה פעולה</string>
     <string name="פעולה_לשכבת_גיל">פעולה לכיתות:</string>
+    <string name="דף_בית">דף הבית</string>
 </resources>
