--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="לא_נבחרה_פעולה">לא נבחרה פעולה</string>
     <string name="פעולה_לשכבת_גיל">פעולה לכיתות:</string>
     <string name="דף_בית">דף הבית</string>
+    <string name="הרשמה_לפעולה">הרשמה לפעולה</string>
+    <string name="שעה_פעולה">בחר שעה לפעולה</string>
 </resources>
