Child Registration To Activity Added

--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="דף_בית">דף הבית</string>
     <string name="הרשמה_לפעולה">הרשמה לפעולה</string>
     <string name="שעה_פעולה">בחר שעה לפעולה</string>
+    <string name="פעולות_רשומות">פעולות רשומות</string>
 </resources>
