--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="יצירת_הודעה">יצירת הודעה</string>
     <string name="ביטול">ביטול</string>
     <string name="שליחה">שליחה</string>
+    <string name="ההודעות_שלי">ההודעות שלי</string>
 </resources>
