--- a/NLB/app/src/main/res/values/strings.xml
+++ b/NLB/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="כותרת_הודעה">כותרת ההודעה</string>
     <string name="גוף_הודעה">גוף ההודעה</string>
     <string name="כותרת_הודעה_עיצוב">כותרת ההודעה: </string>
+    <string name="הילדים_שלי_הערה">לחיצה קצרה להרשמה לפעולה ולחיצה ארוכה לעדכון נתונים</string>
 </resources>
